GET/POST /klasse

--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -555,6 +555,56 @@ paths:
               schema:
                 $ref: "#/components/schemas/InnsynskravDel"
 
+  /klasse:
+    get:
+      description: Get a Klasse list.
+      tags:
+        - Klasse
+      operationId: GetKlasseList
+      parameters:
+        - $ref: "#/components/parameters/Expand"
+        - $ref: "#/components/parameters/Limit"
+        - $ref: "#/components/parameters/SortOrder"
+        - $ref: "#/components/parameters/StartingAfter"
+        - $ref: "#/components/parameters/EndingBefore"
+        - name: arkivdel
+          in: query
+          description: Filter by Arkivdel
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                type: object
+                allOf:
+                  - $ref: "#/components/schemas/ResultList"
+                  - type: object
+                    properties:
+                      data:
+                        type: array
+                        items:
+                          $ref: "#/components/schemas/Klasse"
+    post:
+      description: Create a Klasse.
+      tags:
+        - Klasse
+      operationId: PostKlasse
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Klasse"
+      responses:
+        "200":
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Klasse"
+
   /klasse/{id}:
     get:
       description: Get a single Klasse.
