--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -187,7 +187,7 @@ paths:
           schema:
             type: string
           x-resourceId: Arkiv
-      operationId: PostArkivdel
+      operationId: PostArkivArkivdel
       requestBody:
         content:
           application/json:
