--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -2301,6 +2301,33 @@ paths:
               schema:
                 $ref: "#/components/schemas/Dokumentbeskrivelse"
 
+  /utredning/{utredningId}/utredningsdokument/{utredningsdokumentId}:
+    delete:
+      description: Delete a single Utredningsdokument.
+      tags:
+        - Utredning
+      operationId: DeleteUtredningUtredningsdokument
+      parameters:
+        - name: utredningId
+          in: path
+          required: true
+          schema:
+            type: string
+          x-resourceId: Utredning
+        - name: utredningsdokumentId
+          in: path
+          required: true
+          schema:
+            type: string
+          x-resourceId: Dokumentbeskrivelse
+      responses:
+        "200":
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Dokumentbeskrivelse"
+
   /vedtak/{vedtakId}:
     get:
       description: Get a single Vedtak.
@@ -2421,6 +2448,33 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/Dokumentbeskrivelse"
+      responses:
+        "200":
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Dokumentbeskrivelse"
+
+  /vedtak/{vedtakId}/vedtaksdokument/{vedtaksdokumentId}:
+    delete:
+      description: Delete a single Vedtaksdokument.
+      tags:
+        - Vedtak
+      operationId: DeleteVedtakVedtaksdokument
+      parameters:
+        - name: vedtakId
+          in: path
+          required: true
+          schema:
+            type: string
+          x-resourceId: Vedtak
+        - name: vedtaksdokumentId
+          in: path
+          required: true
+          schema:
+            type: string
+          x-resourceId: Dokumentbeskrivelse
       responses:
         "200":
           description: Successful response.
@@ -4741,14 +4795,16 @@ components:
             enhetstype:
               type: string
               enum:
-                - VIRKSOMHET
-                - UTVALG
-                - AVDELING
                 - ADMINISTRATIVENHET
-                - SEKSJON
+                - AVDELING
                 - BYDEL
-                - KOMMUNE
                 - DUMMYENHET
+                - FYLKE
+                - KOMMUNE
+                - ORGAN
+                - SEKSJON
+                - UTVALG
+                - VIRKSOMHET
             avsluttetDato:
               type: string
               format: date
