Add "handteresAv" to enhet

--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -5751,6 +5751,10 @@ components:
                 anyOf:
                   - type: string
                   - $ref: "#/components/schemas/Enhet"
+            handteresAv:
+              anyOf:
+                - type: string
+                - $ref: "#/components/schemas/Enhet"
             parent:
               anyOf:
                 - type: string
