Remove readOnly from publisertDato

--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -5043,7 +5043,7 @@ components:
               type: string
             publisertDato:
               type: string
-              format: date
+              format: date-time
               description: >-
                 The date the resource was published. This field is updated
                 automatically, but can be set manually by admins.
@@ -5139,7 +5139,9 @@ components:
             publisertDato:
               type: string
               format: date
-              readOnly: true
+              description: >-
+                The date the resource was published. This field is updated
+                automatically, but can be set manually by admins.
             parent:
               anyOf:
                 - type: string
