--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -2216,7 +2216,7 @@ paths:
                         items:
                           $ref: "#/components/schemas/Dokumentbeskrivelse"
     post:
-      description: Create a Dokumentbeskrivelse.
+      description: Create a Dokumentbeskrivelse, or relate to an existing one.
       tags:
         - Dokumentbeskrivelse
       operationId: PostMoetedokumentDokumentbeskrivelse
@@ -2231,7 +2231,9 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Dokumentbeskrivelse"
+              anyOf:
+                - type: string
+                - $ref: "#/components/schemas/Dokumentbeskrivelse"
       responses:
         "200":
           description: Successful response.
@@ -2406,7 +2408,9 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Dokumentbeskrivelse"
+              anyOf:
+                - type: string
+                - $ref: "#/components/schemas/Dokumentbeskrivelse"
       responses:
         "200":
           description: Successful response.
@@ -3592,7 +3596,9 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Dokumentbeskrivelse"
+              anyOf:
+                - type: string
+                - $ref: "#/components/schemas/Dokumentbeskrivelse"
       responses:
         "200":
           description: Successful response.
