Added "dokumenttype" to Dokumentbeskrivelse

--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -5795,6 +5795,8 @@ components:
               type: string
             dokumentnummer:
               type: integer
+            dokumenttype:
+              type: string
             tilknyttetRegistreringSom:
               type: string
             dokumentobjekt:
