Increase max length for korrespondansepartNavn

--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -5535,8 +5535,10 @@ components:
               readOnly: true
             korrespondansepartNavn:
               type: string
+              maxLength: 20000
             korrespondansepartNavnSensitiv:
               type: string
+              maxLength: 20000
             korrespondanseparttype:
               type: string
             saksbehandler:
